add teaching section

--- a/industry.html
+++ b/industry.html
@@ -46,13 +46,13 @@
             <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -90,11 +90,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <ul class="fa-ul mb-2">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Prospective intern working on software development projects.</li>
-              </ul>
+              <p>Prospective intern working on software development projects.</p>
             </div>
           </div>
 
@@ -114,11 +110,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <ul class="fa-ul mb-2">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Designed a website in a team using the Google Maps API that allows a user to map out a running route and view the route using Google Street View in a boot camp focused on web development.</li>
-              </ul>
+              <p>Designed a website in a team using the Google Maps API that allows a user to map out a running route and view the route using Google Street View in a boot camp focused on web development.</p>
             </div>
           </div>
 
