--- a/fun.html
+++ b/fun.html
@@ -46,13 +46,13 @@
             <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -63,259 +63,58 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li> -->
         </ul>
       </div>
     </nav>
 
     <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <section class="resume-section p-3 p-lg-5 d-flex d-column">
         <div class="my-auto">
-          <h1 class="mb-0">Caitlin
-            <span class="text-primary">Westerfield</span>
-          </h1>
-          <div class="subheading mb-5">(773) 849-9335 ·
-            <a href="mailto:name@email.com">caitlin.westerfield@yale.edu</a>
+
+          <h2>Just for Fun</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-3">Marathon Running</h3>
+            </div>
           </div>
-          <p class="mb-5">Hi my name is Caitlin and I am a sophomore at Yale originally from Evanston, IL. I am particularly interested in using education technology to fix major gaps within the education system. Learn more about me below and feel free to send me an email at <a href="mailto:name@email.com">caitlin.westerfield@yale.edu</a>. I would love to hear from you!<!--I think that technology has the power to equalize students no matter their gender, race, ethinicity, or economic background by providing the tools to adapt learning to particular students.-->
-          </p>
-          <!-- <p>I pursue my passion in improving access to computer science and computer science education through my involvement with Code Haven as the current curriculum director and past events director, which teaches computer programming to 6 classrooms and a total of 120 students in New Haven Public Schools. As event director, I organized the first ever TeachTech in December 2017 – a conference aimed at showing teachers with no prior computer science experience how to incorporate a programming curriculum into their classrooms. This past May 2018, I also planned the inaugral Code Haven Project Fair, where our 120 students presented the apps they had been building in a science fair-esque event to get them excited about computer science and inspire them to continue pursuing all that programming has to offer.</p>-->
-          <!-- <p>As someone who did not have experience with computer science until much later than my peers, I feel that it is important to make sure that other students start learning at a young age that computer science is a subject they, too, can become passionate about. As the world becomes increasingly technologically dependent, we need programmers and engineers of all different backgrounds to make sure that as we build the world of tomorrow, we also build a world that is inclusive and cognizent of potential biases. This can only happen if the people building that world are as diverse as the world itself. </p> -->
-          <!-- </p>Learn more about me below and feel free to send me an email at caitlin.westerfield@yale.edu. I would love to hear from you!</p></p> -->
-          <ul class="list-inline list-social-icons mb-0">
-            <!-- <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
+
+          <div class="row">
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="portfolio-hover">
+                  <div class="portfolio-hover-content">
+                    <img class="rounded-circle img-fluid" src="img/running/new_york2016.JPG" alt="">
+                    <!-- <i class="fa fa-plus fa-3x"></i> -->
+                  </div>
+                </div>
               </a>
-            </li> -->
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/caitlin-westerfield/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
+              <div class="portfolio-caption">
+                <h4>New York Marathon</h4>
+                <p class="text-muted">2016</p>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <img class="rounded-circle img-fluid" src="img/running/marine_corps2017.jpg" alt="">
               </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/CMWesterfield16">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
+              <div class="portfolio-caption">
+                <h4>Marine Corps Marathon</h4>
+                <p class="text-muted">2017</p>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+
+                <img class="rounded-circle img-fluid" src="img/running/blue.png" alt="">
               </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://medium.com/@caitlin.westerfield">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-        <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <div class="portfolio-caption">
+                <h4>Chicago Marathon</h4>
+                <p class="text-muted">2018</p>
+              </div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
+
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
-
         </div>
 
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
-            </div>
-          </div>
-
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
       </section>
 
     </div>
