--- a/research.html
+++ b/research.html
@@ -46,13 +46,13 @@
             <a class="nav-link js-scroll-trigger" href="education.html">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="teaching.html">Teaching</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -63,21 +63,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li> -->
         </ul>
       </div>
     </nav>
@@ -88,34 +73,13 @@
         <div class="my-auto">
 
           <h2 class="mb-3">Research Experience</h2>
-          <!-- <div class="resume-content mr-auto">
-            <h3 class="mb-0">Publications</h3>
-            <div class="subheading mb-3">
-              <a href="https://www.att.com/">Machine Translation for English Retrieval of Any Language Project</a>
-              </div>
-
-            <ul class="fa-ul mb-0">
-              <li>
-                <i class="fa-li fa fa-circle text-warning"></i>
-                Fabbri, A., Li, I., Trairatvorakul, P., He, Y., Ting, T., Tung, R., Westerfield, C., Radev, D. (2018) “TutorialBank: Using a Manually-Collected Corpus for Prerequisite Chains, Survey Extraction and Resource Recommendation.” Association for Computational Linguistics.</li>
-            </ul>
-          </div> -->
 
           <div class="resume-item d-flex flex-column flex-md-row mb-4">
             <div class="resume-content mr-auto">
               <h3 class="mb-3">Publications</h3>
-              <ul class="fa-ul mb-0">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Fabbri, A., Li, I., Trairatvorakul, P., He, Y., Ting, T., Tung, R.,<b class="text-bold"> Westerfield, C.</b>, Radev, D. (2018) <a href="https://arxiv.org/abs/1805.04617">“TutorialBank: Using a Manually-Collected Corpus for Prerequisite Chains, Survey Extraction and Resource Recommendation.”</a> Association for Computational Linguistics.</li>
-              </ul>
+              <p>Fabbri, A., Li, I., Trairatvorakul, P., He, Y., Ting, T., Tung, R.,<b class="text-bold"> Westerfield, C.</b>, Radev, D. (2018) <a href="https://arxiv.org/abs/1805.04617">“TutorialBank: Using a Manually-Collected Corpus for Prerequisite Chains, Survey Extraction and Resource Recommendation.”</a> Association for Computational Linguistics.</p>
             </div>
           </div>
-
-          <!-- https://yale-lily.github.io/ -->
-
-          <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5"> -->
-
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -140,11 +104,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <ul class="fa-ul mb-2">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Redesign translation software for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</li>
-              </ul>
+              <p>Redesign translation software for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p>
 
             </div>
           </div>
@@ -161,11 +121,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <ul class="fa-ul mb-2">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Create and update the <a href="http://tangra.cs.yale.edu/newaan/">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</li>
-              </ul>
+              <p>Create and update the <a href="http://tangra.cs.yale.edu/newaan/">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</p>
             </div>
           </div>
 
@@ -192,11 +148,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <ul class="fa-ul mb-2">
-                <li>
-                  <i class="fa-li fa fa-square"></i>
-                  Used R to research mutations in the RAS pathway in Caenorhabditis elegans to determine possible sites of cancer in the equivalent human pathway.</li>
-              </ul>
+              <p>Used R to research mutations in the RAS pathway in Caenorhabditis elegans to determine possible sites of cancer in the equivalent human pathway.</p>
             </div>
           </div>
 
