add fun section

--- a/fun.html
+++ b/fun.html
@@ -83,7 +83,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <div class="portfolio-hover">
-                  <div class="portfolio-hover-content">
+                  <div class="portfolio-hover-content mb-2">
                     <img class="rounded-circle img-fluid" src="img/running/new_york2016.JPG" alt="">
                     <!-- <i class="fa fa-plus fa-3x"></i> -->
                   </div>
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
-                <img class="rounded-circle img-fluid" src="img/running/marine_corps2017.jpg" alt="">
+                <img class="rounded-circle img-fluid mb-2" src="img/running/marine_corps2017.jpg" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>Marine Corps Marathon</h4>
@@ -104,7 +104,7 @@
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
 
-                <img class="rounded-circle img-fluid" src="img/running/blue.png" alt="">
+                <img class="rounded-circle img-fluid mb-2" src="img/running/blue.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>Chicago Marathon</h4>
