--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <a href="https://yale-lily.github.io/">
-                <h3 class="mb-0">The Language Information & Learning at Yale Lab</h3></a>
+                <h3 class="mb-0">Language, Information, & Learning at Yale</h3></a>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
@@ -98,7 +98,7 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
-                <p>June 2018 - August 2018</p></span>
+                <p>September 2017 - present</p></span>
             </div>
           </div>
 
