add women in CS and teaching pages

--- a/industry.html
+++ b/industry.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -79,7 +80,8 @@
               <h3 class="mb-0">Software Engineering Intern</h3>
               <div class="subheading mb-3">
                 <a href="https://www.att.com/">AT&T</a>
-                </div>
+              </div>
+              <p>Prospective intern working on software development projects.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
@@ -90,27 +92,16 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <p>Prospective intern working on software development projects.</p>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
               <h3 class="mb-0">Summer Academy of Code Student</h3>
               <div class="subheading mb-3">
                 <a href="https://www.codesmith.io/">Codesmith</a>
               </div>
+              <p>Designed a website called <a href="https://run-a-way.herokuapp.com/">Run-A-Way</a> in a team during the Summer Academy of Code boot camp focused on web development using the Google Maps API that allows a user to map out a running route and view the route using Google Street View.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
                 <p>Los Angelos, CA
                 <br>August 2017</p></span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <p>Designed a website in a team using the Google Maps API that allows a user to map out a running route and view the route using Google Street View in a boot camp focused on web development.</p>
             </div>
           </div>
 
