--- a/research.html
+++ b/research.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -95,33 +96,22 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Machine Translation for English Retrieval of Any Language Project</div>
+              <p>Redesign translation software for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
                 <p>September 2017 - present</p></span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <p>Redesign translation software for a cross-lingual information retrieval system specifically for low-density and surprise languages, with training data in Swahili and Tagalog.</p>
-
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">All About NLP Project</div>
+              <p>Create and update the <a href="http://tangra.cs.yale.edu/newaan/">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
                 <p>September 2017 - present</p></span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <p>Create and update the <a href="http://tangra.cs.yale.edu/newaan/">All About NLP (AAN)</a> website interface and database with a focus on improving search queries through machine learning as part of a team of developers.</p>
             </div>
           </div>
 
@@ -139,19 +129,13 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Genome Assembly & Annotation Project</div>
+              <p>Used R to research mutations in the RAS pathway in Caenorhabditis elegans to determine possible sites of cancer in the equivalent human pathway.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
                 <p>September 2015 - July 2016</p></span>
             </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <p>Used R to research mutations in the RAS pathway in Caenorhabditis elegans to determine possible sites of cancer in the equivalent human pathway.</p>
-            </div>
-          </div>
-
         </div>
 
       </section>
