--- a/teaching.html
+++ b/teaching.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -71,20 +72,14 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Teaching Experience</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-1">
-            <div class="resume-content mr-auto">
-              <a href="https://codehavenyale.com/"><h3 class="mb-0">Code Haven Yale</h3></a>
-            </div>
-          </div>
+          <h2 class="mb-3">Teaching Experience</h2>
 
           <div class="row">
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-6 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                 <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
-                    <img class="img-fluid" src="img/projectfair/header.jpg" alt="">
+                    <img class="img-fluid mb-2" src="img/projectfair/header.jpg" alt="">
                     <!-- <i class="fa fa-plus fa-3x"></i> -->
                   </div>
                 </div>
@@ -94,14 +89,14 @@
                 <p class="text-muted">April 27, 2018</p>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-6 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                 <!-- <div class="portfolio-hover">
                   <div class="portfolio-hover-content">
                     <i class="fa fa-plus fa-3x"></i>
                   </div>
                 </div> -->
-                <img class="img-fluid" src="img/teachtech/img6.png" alt="">
+                <img class="img-fluid mb-2" src="img/teachtech/img6.png" alt="">
               </a>
               <div class="portfolio-caption">
                 <h4>TeachTech</h4>
@@ -125,6 +120,12 @@
 
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
+            <div class="resume-content mr-auto">
+              <a href="https://codehavenyale.com/"><h3 class="mb-0">Code Haven Yale</h3></a>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Curriculum Director</div>
@@ -138,8 +139,8 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <div class="subheading mb-3">Events Director</div>
-              <p>Organized a computer science project fair for more than 120 students and 200 parent attendees to showcase student progress after a year of the Code Haven curriculum.</p>
-              <p>Directed a conference that will guide more than 50 teachers from elementary and middle schools across Connecticut on how to introduce computer science and programming software into their classrooms.</p>
+              <p>Organized a computer science project fair for more than 120 students to showcase student progress after a year of the Code Haven curriculum.</p>
+              <p>Directed a conference that will guide more than 25 teachers from elementary and middle schools across Connecticut on how to introduce computer science and programming software into their classrooms.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">May 2017 - May 2018</span>
@@ -158,8 +159,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Undergraduate Learning Assistant</h3>
-              <div class="subheading mb-3">Yale University Computer Science Department</div>
+              <h3 class="mb-0">Yale University Computer Science Department</h3>
+              <div class="subheading mb-3">Undergraduate Learning Assistant</div>
               <p>Teach review sessions, host office hours, grade assignments, and mentor final projects for the Introduction to Computer Science and Introduction to Programming courses, as well as participate in teacher training workshops.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -184,19 +185,62 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <h2 class="text-uppercase">Code Haven Project Fair 2018</h2>
+                  <!-- <p class="item-intro text-muted">April 27, 2018</p> -->
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Threads</li>
-                    <li>Category: Illustration</li>
+                    <li>Date: April 27, 2018</li>
+                    <li>Organization: Code Haven Yale</li>
+                    <li>Role: Events & Curriculum Director</li>
                   </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img3.jpeg" alt="">
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img7.jpeg" alt="">
+                    </div>
+                  </div>
+                  <p>This year, Code Haven held our first Computer Science Project Fair. At the fair, over 120 middle schoolers that we teach computer programming to each week converged at the Bishop Woods School's gymnasium to present the apps they had been building in MIT App Inventor over the past few months.</p>
+
+                  <p>Read More in this Medium article: <a href="https://medium.com/code-haven/how-middle-schoolers-became-app-developers-code-haven-project-fair-2018-1c5432b49c37">How Middle Schoolers Became App Developers: Code Haven Project Fair 2018</a></p>
+                  <h3 class="text-uppercase">In the Press</h3>
+                  <p>New Haven Register: <a href="https://www.nhregister.com/news/article/Students-find-a-common-language-with-computer-12873213.php#photo-15474862">Students find a common language with computer science</a></p>
+                  <p>Makeblock: <a href="http://www.makeblock.com/official-blog/205544.html">Makeblock Supports the Growth of STEAM Education at Code Haven Project Fair 2018</a></p>
+                  <h3 class="text-uppercase">Gallery</h3>
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img1.jpeg" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img9.jpeg" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img2.jpeg" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img4.jpeg" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img5.jpeg" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img10.jpeg" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img6.jpeg" alt="">
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/projectfair/img8.jpeg" alt="">
+                    </div>
+                  </div>
+                  <button class="btn btn-primary mb-3" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
                 </div>
@@ -218,19 +262,59 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <h2 class="text-uppercase">TeachTech 2017</h2>
+                  <!-- <p class="item-intro text-muted">April 27, 2018</p> -->
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Explore</li>
-                    <li>Category: Graphic Design</li>
+                    <li>Date: December 9, 2017</li>
+                    <li>Organization: Code Haven Yale</li>
+                    <li>Role: Events Director, Presenter</li>
                   </ul>
-                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <div class="row">
+                    <div class="col-7">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/banner.png" alt="">
+                    </div>
+                  </div>
+                  <p>The first TeachTech was a conference that taught K-8 teachers how to incorporate computer science concepts into their classrooms. The day was filled with technical workshops, a panel of educators, and a presentation on how to teach computer science fundamentals. Twenty five teachers attended and said that they plan to integrate our materials into their own classrooms across Connecticut.</p>
+
+                  <p>Read More in this Medium article: <a href="https://medium.com/code-haven/teaching-teachers-to-teach-coding-what-happened-at-teachtech-2017-1be016a428e7">How we Taught Teachers to Teach Coding: TeachTech 2017</a></p>
+                  <h3 class="text-uppercase">Gallery</h3>
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img12.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img11.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img7.png" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img4.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img5.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img3.png" alt="">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img9.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img1.png" alt="">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                      <img class="img-fluid d-block mx-auto mb-3" src="img/teachtech/img8.jpeg" alt="">
+                    </div>
+                  </div>
+                  <button class="btn btn-primary mb-3" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
                 </div>
@@ -252,7 +336,7 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-8 mx-auto">
+              <div class="mx-auto">
                 <div class="modal-body">
                   Project Details Go Here
                   <h2 class="text-uppercase">Project Name</h2>
