--- a/education.html
+++ b/education.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -73,16 +74,13 @@
         <div class="my-auto">
           <h2 class="mb-3">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+          <div class="resume-item d-flex flex-column flex-md-row mb-0">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Yale University</h3>
-              <!-- <div class="subheading mb-3">Bachelor of Science - Computer Science</div>
-              <div class="subheading mb-3">Bachelor of Arts - Religious Studies</div> -->
               <div class="subheading mb-2">
                 <p class="text-muted">Bachelor of Science - Computer Science
                   <br>Bachelor of Arts - Religious Studies</p>
               </div>
-              <div>Coursework: Natural Language Processing, Algorithms, Data Structures & Programming Techniques, Linear Algebra & Matrix Theory, Discrete Mathematics, Ordinary & Partial Differential Equations</div>
             </div>
 
             <div class="resume-date text-md-right">
@@ -92,11 +90,18 @@
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <p><b>Coursework:</b> Natural Language Processing, Algorithms, Data Structures & Programming Techniques, Linear Algebra & Matrix Theory, Discrete Mathematics, Ordinary & Partial Differential Equations</p>
+
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Budapest University of Technology & Economics</h3>
               <div class="subheading mb-2">Aquincum Institute of Technology</div>
-              <p>Coursework: Mobile Software Development</p>
+              <p><b>Coursework:</b> Mobile Software Development</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"><p>Budapest, Hungary
