--- a/fun.html
+++ b/fun.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
