--- a/women.html
+++ b/women.html
@@ -22,6 +22,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/override.css" rel="stylesheet">
 
   </head>
 
@@ -52,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="research.html">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="industry.html">Industry</a>
+            <a class="nav-link js-scroll-trigger" href="industry.html">Technical</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="women.html">Women in CS</a>
@@ -61,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="fun.html">Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="contact.html">Contact Me</a>
+            <a class="nav-link js-scroll-trigger" href="mailto:caitlin.westerfield@yale.edu">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -69,238 +70,65 @@
 
     <div class="container-fluid p-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0">Caitlin
-            <span class="text-primary">Westerfield</span>
-          </h1>
-          <div class="subheading mb-5">(773) 849-9335 ·
-            <a href="mailto:name@email.com">caitlin.westerfield@yale.edu</a>
-          </div>
-          <p class="mb-5">Hi my name is Caitlin and I am a sophomore at Yale originally from Evanston, IL. I am particularly interested in using education technology to fix major gaps within the education system. Learn more about me below and feel free to send me an email at <a href="mailto:name@email.com">caitlin.westerfield@yale.edu</a>. I would love to hear from you!<!--I think that technology has the power to equalize students no matter their gender, race, ethinicity, or economic background by providing the tools to adapt learning to particular students.-->
-          </p>
-          <!-- <p>I pursue my passion in improving access to computer science and computer science education through my involvement with Code Haven as the current curriculum director and past events director, which teaches computer programming to 6 classrooms and a total of 120 students in New Haven Public Schools. As event director, I organized the first ever TeachTech in December 2017 – a conference aimed at showing teachers with no prior computer science experience how to incorporate a programming curriculum into their classrooms. This past May 2018, I also planned the inaugral Code Haven Project Fair, where our 120 students presented the apps they had been building in a science fair-esque event to get them excited about computer science and inspire them to continue pursuing all that programming has to offer.</p>-->
-          <!-- <p>As someone who did not have experience with computer science until much later than my peers, I feel that it is important to make sure that other students start learning at a young age that computer science is a subject they, too, can become passionate about. As the world becomes increasingly technologically dependent, we need programmers and engineers of all different backgrounds to make sure that as we build the world of tomorrow, we also build a world that is inclusive and cognizent of potential biases. This can only happen if the people building that world are as diverse as the world itself. </p> -->
-          <!-- </p>Learn more about me below and feel free to send me an email at caitlin.westerfield@yale.edu. I would love to hear from you!</p></p> -->
-          <ul class="list-inline list-social-icons mb-0">
-            <!-- <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li> -->
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/caitlin-westerfield/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/CMWesterfield16">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://medium.com/@caitlin.westerfield">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-3">Women in Computer Science</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <a><h3 class="mb-0">Yale Undergraduate Society of Women Engineers</h3></a>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <div class="subheading mb-0">President</div>
+              <div class="subheading mb-3">Vice President</div>
+              <p>Create pathways for women engineers at Yale to explore post-graduate opportunities by hosting professional development events and organizing group attendance at the National SWE conference.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <p><span class="text-primary mb-0">April 2018 - Present</span></p>
+              <p><span class="text-primary mb-0">May 2017 - March 2018</span></p>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <a href="http://yalewics.com/"><h3 class="mb-0">Float: Yale Women in Computer Science Society</h3></a>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <div class="subheading mb-0">President</div>
+              <div class="subheading mb-3">Events Committee: Recruitment Lead</div>
+              <p>Foster greater community among Yale women and gender minorities in the computer science major through workshops, social events, town hall meetings with professors, and company partnerships.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <p><span class="text-primary">May 2018 - Present</span></p>
+              <p><span class="text-primary">May 2017 - April 2018</span></p>
             </div>
           </div>
 
-        </div>
-
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <a><h3 class="mb-0">ETHS Women in Science, Technology, Engineering, and Mathematics</h3></a>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <div class="subheading mb-3">Founder & President</div>
+              <p>Founded first ever club at Evanston Township High School to encourage more girls to participate in higher level science courses and pursue careers in STEM.</p>
+              <p>Organized shadow days at Northwestern University, design competitions, monthly meetings, and tutoring programs for more than 150 club members.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">April 2014 - May 2016</span>
             </div>
           </div>
 
         </div>
-      </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
-
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
       </section>
 
     </div>
