--- a/teaching.html
+++ b/teaching.html
@@ -83,11 +83,11 @@
                     <!-- <i class="fa fa-plus fa-3x"></i> -->
                   </div>
                 </div>
+                <div class="portfolio-caption">
+                  <h4>Code Haven Project Fair</h4>
+                  <p class="text-muted">April 27, 2018</p>
+                </div>
               </a>
-              <div class="portfolio-caption">
-                <h4>Code Haven Project Fair</h4>
-                <p class="text-muted">April 27, 2018</p>
-              </div>
             </div>
             <div class="col-md-6 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
@@ -97,11 +97,11 @@
                   </div>
                 </div> -->
                 <img class="img-fluid mb-2" src="img/teachtech/img6.png" alt="">
+                <div class="portfolio-caption">
+                  <h4>TeachTech</h4>
+                  <p class="text-muted">December 9, 2017</p>
+                </div>
               </a>
-              <div class="portfolio-caption">
-                <h4>TeachTech</h4>
-                <p class="text-muted">December 9, 2017</p>
-              </div>
             </div>
             <!-- <div class="col-md-4 col-sm-6 portfolio-item">
               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
@@ -159,7 +159,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Yale University Computer Science Department</h3>
+              <a href="https://cpsc.yale.edu/academics/undergraduate-program"> <h3 class="mb-0">Yale University Computer Science Department</h3> </a>
               <div class="subheading mb-3">Undergraduate Learning Assistant</div>
               <p>Teach review sessions, host office hours, grade assignments, and mentor final projects for the Introduction to Computer Science and Introduction to Programming courses, as well as participate in teacher training workshops.</p>
             </div>
@@ -205,7 +205,7 @@
                   </div>
                   <p>This year, Code Haven held our first Computer Science Project Fair. At the fair, over 120 middle schoolers that we teach computer programming to each week converged at the Bishop Woods School's gymnasium to present the apps they had been building in MIT App Inventor over the past few months.</p>
 
-                  <p>Read More in this Medium article: <a href="https://medium.com/code-haven/how-middle-schoolers-became-app-developers-code-haven-project-fair-2018-1c5432b49c37">How Middle Schoolers Became App Developers: Code Haven Project Fair 2018</a></p>
+                  <p>Read more in my Medium article: <a href="https://medium.com/code-haven/how-middle-schoolers-became-app-developers-code-haven-project-fair-2018-1c5432b49c37">How Middle Schoolers Became App Developers: Code Haven Project Fair 2018</a></p>
                   <h3 class="text-uppercase">In the Press</h3>
                   <p>New Haven Register: <a href="https://www.nhregister.com/news/article/Students-find-a-common-language-with-computer-12873213.php#photo-15474862">Students find a common language with computer science</a></p>
                   <p>Makeblock: <a href="http://www.makeblock.com/official-blog/205544.html">Makeblock Supports the Growth of STEAM Education at Code Haven Project Fair 2018</a></p>
@@ -270,7 +270,7 @@
                   <ul class="list-inline">
                     <li>Date: December 9, 2017</li>
                     <li>Organization: Code Haven Yale</li>
-                    <li>Role: Events Director, Presenter</li>
+                    <li>Role: Events Director & Presenter</li>
                   </ul>
                   <div class="row">
                     <div class="col-7">
@@ -279,7 +279,7 @@
                   </div>
                   <p>The first TeachTech was a conference that taught K-8 teachers how to incorporate computer science concepts into their classrooms. The day was filled with technical workshops, a panel of educators, and a presentation on how to teach computer science fundamentals. Twenty five teachers attended and said that they plan to integrate our materials into their own classrooms across Connecticut.</p>
 
-                  <p>Read More in this Medium article: <a href="https://medium.com/code-haven/teaching-teachers-to-teach-coding-what-happened-at-teachtech-2017-1be016a428e7">How we Taught Teachers to Teach Coding: TeachTech 2017</a></p>
+                  <p>Read more in our Medium article: <a href="https://medium.com/code-haven/teaching-teachers-to-teach-coding-what-happened-at-teachtech-2017-1be016a428e7">How we Taught Teachers to Teach Coding: TeachTech 2017</a></p>
                   <h3 class="text-uppercase">Gallery</h3>
                   <div class="row">
                     <div class="col-md-4 col-sm-6">
