--- a/women.html
+++ b/women.html
@@ -127,6 +127,23 @@
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-1">
+            <div class="resume-content mr-auto">
+              <a><h3 class="mb-0">Conferences</h3></a>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+              <p class="mb-1">
+                <a href="https://we18.swe.org/">WE18 – Society of Women Engineers National Conference</a>, Speaker (accepted)</p>
+              <p class="mb-1">
+                <a href="http://womenengineerscode.com/">WECode 2018 – Women in Computer Science Collegiate Conference</a>, Yale Sponsored Attendee</p>
+              <p class="mb-1">
+                <a href="https://we18.swe.org/">WE17 – Society of Women Engineers National Conference</a>, Yale Sponsored Attendee</p>
+            </div>
+          </div>
+
         </div>
 
       </section>
