--- a/fun.html
+++ b/fun.html
@@ -91,8 +91,8 @@
                 </div>
               </a>
               <div class="portfolio-caption">
-                <h4>New York Marathon</h4>
-                <p class="text-muted">2016</p>
+                <h4>New York City Marathon</h4>
+                <p class="text-muted">November 6, 2016</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -100,7 +100,7 @@
               </a>
               <div class="portfolio-caption">
                 <h4>Marine Corps Marathon</h4>
-                <p class="text-muted">2017</p>
+                <p class="text-muted">October 22, 2017</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
@@ -109,7 +109,7 @@
               </a>
               <div class="portfolio-caption">
                 <h4>Chicago Marathon</h4>
-                <p class="text-muted">2018</p>
+                <p class="text-muted">October 7, 2018</p>
               </div>
             </div>
 
