--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
-                <p>September 2017 - present</p></span>
+                <p>September 2017 - Present</p></span>
             </div>
           </div>
 
@@ -111,7 +111,7 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">
-                <p>September 2017 - present</p></span>
+                <p>September 2017 - Present</p></span>
             </div>
           </div>
 
